Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/AuxiliaryObject__c.object-meta.xml
<CustomObject>
    <description>This object is used as a helper to create lookup fields to various objects so that they may be used in e.g. AJAX lookups.</description>
    <label>AuxiliaryObject</label>
    <nameField>
        <label>AuxiliaryObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuxiliaryObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>