Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Continuous_Integration__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continuous Integration</label>
    <referenceTo>Continuous_Integration__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>