Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Data_Set__c.field-meta.xml
<CustomField>
    <fullName>Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Data Set to use in StepEdition component in deployment page.</description>
    <label>Data Set</label>
    <referenceTo>Data_Set__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>