Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Data_Template__c.field-meta.xml
<CustomField>
    <fullName>Data_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Data_Template__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Data_Template__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>