Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Default_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_Number__c</fullName>
    <label>Default Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>