Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Default_String__c.field-meta.xml
<CustomField>
    <fullName>Default_String__c</fullName>
    <label>Default String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>