Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Default_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Text__c</fullName>
    <label>Default Text</label>
    <type>TextArea</type>
</CustomField>