Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Deployment_Flow__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>