Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>