Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Function</label>
    <referenceTo>Function__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>