Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Org Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>