Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Version</label>
    <referenceTo>Artifact_Version__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>