Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Selenium_Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selenium Test Run</label>
    <referenceTo>Selenium_Test_Run__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>