Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Snapshot_Difference__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Difference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snapshot Difference</label>
    <referenceTo>Snapshot_Difference__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>