Dummy_Package_for_scratch_org/main/default/objects/AuxiliaryObject__c/fields/Static_Code_Analysis_Settings__c.field-meta.xml
<CustomField>
    <fullName>Static_Code_Analysis_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Static Code Analysis Settings</label>
    <referenceTo>Static_Code_Analysis_Settings__c</referenceTo>
    <relationshipLabel>AuxiliaryObjects</relationshipLabel>
    <relationshipName>AuxiliaryObjects</relationshipName>
    <type>Lookup</type>
</CustomField>